# the-rob-vault-app

./: .funcignore  .gitignore  CHANGELOG.md  README.md  auth_server.py  bungie_oauth.py  bungie_session_manager.py  constants.py  db-agent-instructions.md  explore_valut.ipynb  function_app.py  helpers.py  host.json  local.settings.example.json  manifest_cache.py  manifest_identity.py  models.py  platform_exceptions.py  pyproject.toml  pytest.ini  query_schema.json  requirements.txt  test_pyodbc_connection.py  vault-sentinel-instructions.md  vault_assistant.py  vault_sentinel_db_agent.py
.github/: copilot-instructions.md
.github/workflows/: deploy-function-app.yml  deploy-static-site.yml
VaultSentinelPlatform/: __init__.py  exceptions.py  models.py
VaultSentinelPlatform/agent/: __init__.py  db_agent.py
VaultSentinelPlatform/api/: __init__.py  http_utils.py
VaultSentinelPlatform/bungie/: __init__.py  session_manager.py
VaultSentinelPlatform/common/: __init__.py  helpers.py
VaultSentinelPlatform/manifest/: __init__.py  blob_store.py  cache.py  identity.py  query_service.py
VaultSentinelPlatform/vault/: __init__.py  assistant.py
admin/: armor3_overview.md  create-agent-user.sql  db-agent-instructions.md  get-agent-password.sh  patch_9_0_0_1.md  query_schema.jsonc  reset_schema.sql  reveal_recap.md  schema.sql  twid_mods_07_03.md  twid_mods_07_10.md  vault-sentinel-instructions.md  wikipedia_edge_of_fate.md
docs/: db-agent-instructions.md  vault-sentinel-instructions.md
static/: azure-style.css  index.html  legal.html  openapi.yaml  tool.html  vault-sentinel-instructions.md
tests/: destiny-vault-assistant.postman_collection.json  sample_queries.json  test_function_app_query_endpoint.py  test_manifest_blob_store.py  test_manifest_query_service.py  test_platform_exceptions.py  test_pyodbc_connection.py  test_sqlalchemy_connection.py  test_utils.py  test_vault_assistant_exception_handling.py  test_vault_sentinel_db_agent.py
