[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-rob-vault-app"
version = "0.3.0"
description = "Azure Functions backend for Destiny 2 Vault Sentinel and Bungie vault automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "azure-functions>=1.24.0",
    "azure-core>=1.39.0",
    "azure-data-tables>=12.7.0",
    "azure-storage-blob>=12.28.0",
    "azure-identity>=1.25.3",
    "openai>=2.30.0",
    "pyodbc>=5.3.0",
    "SQLAlchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "debugpy>=1.8.20",
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
norecursedirs = ["__pycache__"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.typecheck]
extension-pkg-allow-list = ["pyodbc"]

[tool.setuptools.packages.find]
include = ["VaultSentinelPlatform*"]
exclude = ["tests*", "htmlcov*"]
